Fix for scrolling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div id="bar-5"></div>
     </div>
     <br>
+    <div id="terminal-wrapper">
     <div id="terminal">
       <div>
         <span id="prompt"><span style="color: var(--prompt-1)">guest</span><span
@@ -45,6 +46,7 @@
       </div>
       <br>
     </div>
+  </div>
   </main>
 </body>
 
